Trying to fix misalignment with heights

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ hr {
   background-size: cover;
   z-index: -5;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
